<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/arre"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondito"
    tools:context=".actividades.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:background="@color/fnd_tool2"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/usuario_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="99dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="99dp"
        android:ems="10"
        android:hint="usuario"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edad_et"
        android:layout_width="261dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/usuario_et"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="99dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="99dp"
        android:ems="10"
        android:hint="edad"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usuario_et" />

    <EditText
        android:id="@+id/credito_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edad_et"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="99dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="99dp"
        android:ems="10"
        android:hint="credito"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edad_et" />

    <Button
        android:id="@+id/buscar"
        android:layout_width="141dp"
        android:layout_height="54dp"
        android:layout_below="@id/credito_et"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:onClick="buscar"
        android:text="@string/buscar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/credito_et" />

    <Button
        android:id="@+id/agregar"
        android:layout_width="141dp"
        android:layout_height="54dp"
        android:layout_below="@id/credito_et"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:onClick="agregar"
        android:text="@string/registro" />

    <Button
        android:id="@+id/modifica"
        android:layout_width="141dp"
        android:layout_height="54dp"
        android:layout_below="@id/agregar"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:onClick="modificar"
        android:text="@string/modificar" />

    <Button
        android:id="@+id/eliminar"
        android:layout_width="141dp"
        android:layout_height="54dp"
        android:layout_below="@id/buscar"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:onClick="eliminar"
        android:text="@string/eliminar" />

    <Button
        android:id="@+id/juego"
        android:layout_width="141dp"
        android:layout_height="54dp"
        android:layout_below="@id/modifica"
        android:layout_marginStart="110dp"
        android:layout_marginTop="40dp"
        android:onClick="juegos"
        android:text="@string/juegos" />

</RelativeLayout>