<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondito"
    tools:context=".juegos.Ruleta">

    <Button
        android:id="@+id/btn_girar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_numero"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="20dp"
        android:text="Girar"
        app:layout_constraintTop_toBottomOf="@+id/ic_rule" />

    <TextView
        android:id="@+id/txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_numero"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="20dp"
        android:textSize="32dp" />

    <ImageView
        android:id="@+id/ic_rule"
        android:layout_width="281dp"
        android:layout_height="248dp"
        android:layout_below="@id/txt"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/roul" />

    <ImageView
        android:id="@+id/ic_fle"
        android:layout_width="23dp"
        android:layout_height="30dp"
        android:layout_marginLeft="199dp"
        android:layout_marginTop="360dp"
        app:layout_constraintTop_toBottomOf="@+id/txt"
        app:srcCompat="@drawable/flech" />

    <Button
        android:id="@+id/regre"
        android:layout_width="141dp"
        android:layout_height="54dp"
        android:layout_below="@id/ic_rule"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="20dp"
        android:onClick="regre"
        android:text="@string/regresar"/>

    <EditText
        android:id="@+id/et_usuario"
        android:layout_width="153dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/usuario"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light" />

    <EditText
        android:id="@+id/et_apuest"
        android:layout_width="201dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_credito"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="Apuesta"
        android:inputType="number"
        android:textColor="@android:color/background_light"
        android:textColorHint="#FFFFFF" />

    <EditText
        android:id="@+id/et_numero"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_apuest"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="Numero a apostar"
        android:inputType="number"
        android:textColor="@android:color/background_light"
        android:textColorHint="#FFFFFF" />

    <TextView
        android:id="@+id/et_credito"
        android:layout_width="163dp"
        android:layout_height="44dp"
        android:layout_below="@id/et_usuario"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:enabled="false"
        android:hint="@string/credito"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textColorHighlight="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        android:textSize="23dp" />

    <Button
        android:id="@+id/buscar"
        android:layout_width="145dp"
        android:layout_height="61dp"
        android:layout_marginLeft="280dp"
        android:layout_marginTop="30dp"
        android:onClick="buscador"
        android:text="@string/buscar" />

</RelativeLayout>